--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,11 @@
 :root {
   font-size: 62.5%; }
 
-body {
-  font-family: "Chivo", sans-serif; }
+.body {
+  font-family: "Chivo", sans-serif;
+  background: linear-gradient(rgba(18, 23, 37, 0.8), rgba(18, 23, 37, 0.9)), url("../../assets/mobile/ezgif.com-gif-maker.webp") no-repeat center;
+  background-size: cover;
+  width: 100%;
+  height: 100vh; }
 
 /*# sourceMappingURL=style.css.map */
