--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -1,7 +1,14 @@
+@import "variable";
+
 :root {
   font-size: 62.5%;
 }
 
-body {
+.body {
   font-family: "Chivo", sans-serif;
+  background: linear-gradient(rgba(18, 23, 37, 0.8), rgba(18, 23, 37, 0.9)),
+    url("../../assets/mobile/ezgif.com-gif-maker.webp") no-repeat center;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
 }
