--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,52 @@
   background: linear-gradient(rgba(18, 23, 37, 0.8), rgba(18, 23, 37, 0.9)), url("../../assets/mobile/ezgif.com-gif-maker.webp") no-repeat center;
   background-size: cover;
   width: 100%;
-  height: 100vh; }
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  height: 80%; }
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  height: 80%; }
+
+.action {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  height: 11rem;
+  text-align: center; }
+  .action__email {
+    font-weight: 400;
+    font-size: 1.4px;
+    line-height: 2.8rem;
+    border-radius: 10rem;
+    border: none;
+    width: 32.6rem;
+    height: 4.6rem;
+    background-color: #2c344b;
+    mix-blend-mode: normal; }
+  .action__btn {
+    font-weight: 400;
+    font-size: 1.4px;
+    line-height: 2.8rem;
+    border-radius: 10rem;
+    border: none;
+    width: 32.6rem;
+    height: 4.6rem;
+    background-color: #54e6af;
+    color: #121725;
+    margin-top: 1.6rem; }
 
 /*# sourceMappingURL=style.css.map */
