--- a/assets/sass/_mixin.scss
+++ b/assets/sass/_mixin.scss
@@ -52,6 +52,7 @@
   font-size: 1.4px;
   line-height: 2.8rem;
   border-radius: 10rem;
+  border: none;
 }
 
 @mixin btn-sm {
@@ -67,8 +68,6 @@
   width: 32.6rem;
   height: 4.6rem;
   background-color: $dark-gray;
-  color: $text-white;
-  opacity: 0.5;
   mix-blend-mode: normal;
 }
 
@@ -87,4 +86,13 @@
   width: 16.2rem;
   height: 4.6rem;
   background-color: $green;
+}
+
+// Positioning
+
+@mixin flex-column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
