--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,7 @@
   text-align: center; }
   .action__email {
     font-weight: 400;
-    font-size: 1.4px;
+    font-size: 1.4rem;
     line-height: 2.8rem;
     border-radius: 10rem;
     border: none;
@@ -79,9 +79,11 @@
     height: 4.6rem;
     background-color: #2c344b;
     mix-blend-mode: normal; }
+    .action__email::placeholder {
+      padding-left: 3.2rem; }
   .action__btn {
     font-weight: 400;
-    font-size: 1.4px;
+    font-size: 1.4rem;
     line-height: 2.8rem;
     border-radius: 10rem;
     border: none;
@@ -89,6 +91,7 @@
     height: 4.6rem;
     background-color: #54e6af;
     color: #121725;
-    margin-top: 1.6rem; }
+    margin-top: 1.6rem;
+    font-weight: 700; }
 
 /*# sourceMappingURL=style.css.map */
