--- a/assets/sass/_mixin.scss
+++ b/assets/sass/_mixin.scss
@@ -44,14 +44,13 @@
 // Button & email input field
 @mixin mobile-cta {
   font-weight: 400;
-  font-size: 1.4px;
+  font-size: 1.4rem;
   line-height: 2.8rem;
   border-radius: 10rem;
   border: none;
 }
 
 @mixin btn-sm {
-  @include mobile-cta;
   width: 32.6rem;
   height: 4.6rem;
   background-color: $green;
@@ -59,7 +58,6 @@
 }
 
 @mixin field-sm {
-  @include mobile-cta;
   width: 32.6rem;
   height: 4.6rem;
   background-color: $dark-gray;
@@ -67,7 +65,6 @@
 }
 
 @mixin field-lg {
-  @include mobile-cta;
   width: 42.7rem;
   height: 5.6rem;
   background-color: $dark-gray;
@@ -77,10 +74,10 @@
 }
 
 @mixin btn-lg {
-  @include mobile-cta;
   width: 16.2rem;
   height: 4.6rem;
   background-color: $green;
+  color: $dark-blue;
 }
 
 // Positioning
