--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+  align-content: space-between;
   height: 80%; }
 
 .content {
@@ -23,7 +24,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  height: 80%;
+  min-height: 40rem;
   width: 87.4%; }
   .content__title {
     font-size: 2.6rem;
@@ -41,7 +42,8 @@
     font-weight: 300;
     color: #c2cbe5; }
   .content__links {
-    width: 100%; }
+    width: 100%;
+    margin-bottom: 2rem; }
     .content__links--list {
       display: flex;
       width: 100%;
@@ -78,8 +80,9 @@ li + li {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  height: 11rem;
-  text-align: center; }
+  min-height: 11rem;
+  text-align: center;
+  margin-top: 2rem; }
   .action__email {
     font-weight: 400;
     font-size: 1.4rem;
@@ -106,5 +109,9 @@ li + li {
     color: #121725;
     margin-top: 1.6rem;
     font-weight: 700; }
+
+@media screen and (min-width: 600px) {
+  .content__title {
+    font-size: 3.6rem; } }
 
 /*# sourceMappingURL=style.css.map */
