--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   align-content: space-between;
   height: 80%; }
 
@@ -23,7 +23,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
+  align-content: space-between;
   min-height: 40rem;
   width: 87.4%; }
   .content__title {
@@ -46,6 +47,7 @@
     margin-bottom: 2rem; }
     .content__links--list {
       display: flex;
+      flex-wrap: wrap;
       width: 100%;
       padding-left: 0;
       list-style-type: none;
@@ -79,10 +81,12 @@ li + li {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   min-height: 11rem;
   text-align: center;
-  margin-top: 2rem; }
+  margin-top: 2rem;
+  max-width: 40rem;
+  width: 100%; }
   .action__email {
     font-weight: 400;
     font-size: 1.4rem;
@@ -110,6 +114,14 @@ li + li {
     margin-top: 1.6rem;
     font-weight: 700; }
 
+@media screen and (max-width: 350px) {
+  .action__email {
+    max-width: 32.6rem;
+    width: 100%; }
+
+  .action__btn {
+    max-width: 32.6rem;
+    width: 100%; } }
 @media screen and (min-width: 600px) {
   .content__title {
     font-size: 3.6rem; } }
