--- a/assets/sass/_breakpoints.scss
+++ b/assets/sass/_breakpoints.scss
@@ -1,6 +1,17 @@
 @import "variable";
 @import "mixin";
 
+@media screen and (max-width: 350px) {
+  .action__email {
+    max-width: 32.6rem;
+    width: 100%;
+  }
+  .action__btn {
+    max-width: 32.6rem;
+    width: 100%;
+  }
+}
+
 @media screen and (min-width: 600px) {
   .content__title {
     font-size: 3.6rem;
