--- a/assets/sass/_mixin.scss
+++ b/assets/sass/_mixin.scss
@@ -86,5 +86,5 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 }
