--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,9 @@
   align-items: center;
   justify-content: center; }
 
+.image {
+  display: none; }
+
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -125,5 +128,17 @@ li + li {
 @media screen and (min-width: 600px) {
   .content__title {
     font-size: 3.6rem; } }
+@media screen and (min-width: 768px) {
+  .body {
+    position: relative;
+    background-image: none;
+    background-color: #121725; }
+
+  .image {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: -1; } }
 
 /*# sourceMappingURL=style.css.map */
