--- a/assets/sass/_breakpoints.scss
+++ b/assets/sass/_breakpoints.scss
@@ -17,3 +17,18 @@
     font-size: 3.6rem;
   }
 }
+
+@media screen and (min-width: 768px) {
+  .body {
+    position: relative;
+    background-image: none;
+    background-color: $dark-blue;
+  }
+  .image {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: -1;
+  }
+}
