--- a/assets/sass/_breakpoints.scss
+++ b/assets/sass/_breakpoints.scss
@@ -31,4 +31,43 @@
     right: 0;
     z-index: -1;
   }
+  .logo {
+    align-self: flex-start;
+  }
+  .content {
+    background-color: $dark-blue;
+    align-items: flex-start;
+    &__title {
+      @include title-tablet;
+      text-align: left;
+    }
+    &__paragraph {
+      @include tablet-p;
+      text-align: left;
+      max-width: 44.5rem;
+    }
+  }
+  .spotify {
+    width: 9.6rem;
+    height: 2.9rem;
+    opacity: 0.5;
+  }
+  .apple {
+    width: 7.8rem;
+    height: 2.9rem;
+    opacity: 0.5;
+  }
+  .google {
+    width: 12.5rem;
+    height: 1.8rem;
+    opacity: 0.5;
+  }
+  .pocket {
+    width: 12.9rem;
+    height: 2.6rem;
+    opacity: 0.5;
+  }
+  .action {
+    display: none;
+  }
 }
