--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -65,23 +65,23 @@ li + li {
 }
 
 .spotify {
-  width: 56px;
-  height: 17px;
+  width: 5.6rem;
+  height: 1.7rem;
   opacity: 0.5;
 }
 .apple {
-  width: 45px;
-  height: 17px;
+  width: 4.5rem;
+  height: 1.7rem;
   opacity: 0.5;
 }
 .google {
-  width: 73px;
-  height: 11px;
+  width: 7.3rem;
+  height: 1.1rem;
   opacity: 0.5;
 }
 .pocket {
-  width: 77px;
-  height: 15px;
+  width: 7.7rem;
+  height: 1.5rem;
   opacity: 0.5;
 }
 
