--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,7 @@ li + li {
     background-color: #2c344b;
     mix-blend-mode: normal; }
     .action__email::placeholder {
+      font-weight: 700;
       padding-left: 3.2rem;
       color: #fff;
       opacity: 0.5; }
@@ -148,6 +149,8 @@ li + li {
     align-self: flex-start; }
 
   .content {
+    width: 63.5rem;
+    height: 51rem;
     background-color: #121725;
     align-items: flex-start; }
     .content__title {
@@ -195,16 +198,35 @@ li + li {
       color: #fff;
       opacity: 0.5;
       mix-blend-mode: normal;
-      border-radius: 10rem; }
+      font-weight: 400;
+      font-size: 1.4rem;
+      line-height: 2.8rem;
+      border-radius: 10rem;
+      border: none;
+      padding-left: 3.2rem;
+      border-radius: 10rem;
+      border: none; }
+      .combination__email::placeholder {
+        font-weight: 700;
+        padding-left: 3.2rem;
+        color: #fff;
+        opacity: 0.5; }
     .combination__btn {
       width: 16.2rem;
       height: 4.6rem;
       background-color: #54e6af;
       color: #121725;
+      font-weight: 400;
+      font-size: 1.4rem;
+      line-height: 2.8rem;
+      border-radius: 10rem;
+      border: none;
+      font-weight: 700;
+      border: none;
       border-radius: 10rem;
       position: absolute;
-      top: 0;
-      right: 0;
+      top: 11%;
+      right: -6%;
       z-index: 2; } }
 
 /*# sourceMappingURL=style.css.map */
