--- a/assets/sass/_breakpoints.scss
+++ b/assets/sass/_breakpoints.scss
@@ -31,6 +31,10 @@
     right: 0;
     z-index: -1;
   }
+  .wrapper {
+    height: 100%;
+    margin-top: 5rem;
+  }
   .logo {
     align-self: flex-start;
   }
@@ -102,5 +106,11 @@
       right: -6%;
       z-index: 2;
     }
+  }
+  .dots {
+    display: block;
+    width: 23.2rem;
+    height: 10.4rem;
+    align-self: flex-start;
   }
 }
