Set margin 0 to title and paragraph for correct positioning in box

--- a/assets/sass/_breakpoints.scss
+++ b/assets/sass/_breakpoints.scss
@@ -52,9 +52,11 @@
     &__title {
       @include title-tablet;
       text-align: left;
+      margin-bottom: 0;
     }
     &__paragraph {
       @include tablet-p;
+      margin: 0;
       text-align: left;
       max-width: 44.5rem;
     }
