--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,10 +171,12 @@ li + li {
     .content__title {
       font-size: 4.8rem;
       line-height: 5.6rem;
-      text-align: left; }
+      text-align: left;
+      margin-bottom: 0; }
     .content__paragraph {
       font-size: 1.8rem;
       line-height: 2.8rem;
+      margin: 0;
       text-align: left;
       max-width: 44.5rem; }
 
