--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,9 @@
 .image {
   display: none; }
 
+.image__lg {
+  display: none; }
+
 .combination {
   display: none; }
 
@@ -212,6 +215,7 @@ li + li {
       width: 42.7rem;
       height: 5.6rem;
       background-color: #2c344b;
+      border-radius: 10rem;
       color: #fff;
       opacity: 0.5;
       mix-blend-mode: normal;
@@ -221,7 +225,6 @@ li + li {
       border-radius: 10rem;
       border: none;
       padding-left: 3.2rem;
-      border-radius: 10rem;
       border: none; }
       .combination__email::placeholder {
         font-weight: 700;
@@ -232,6 +235,7 @@ li + li {
       width: 16.2rem;
       height: 4.6rem;
       background-color: #54e6af;
+      border-radius: 10rem;
       color: #121725;
       font-weight: 400;
       font-size: 1.4rem;
@@ -240,7 +244,6 @@ li + li {
       border: none;
       font-weight: 700;
       border: none;
-      border-radius: 10rem;
       position: absolute;
       top: 11%;
       right: -6%;
@@ -251,5 +254,36 @@ li + li {
     width: 23.2rem;
     height: 10.4rem;
     align-self: flex-start; } }
+@media screen and (min-width: 1440px) {
+  .image {
+    display: none; }
+
+  .image__lg {
+    display: block;
+    position: absolute;
+    top: 14%;
+    right: 0;
+    z-index: -1; }
+
+  .wrapper {
+    width: 77%;
+    height: 72%;
+    flex-wrap: wrap;
+    margin-top: 0; }
+
+  .content {
+    width: 72.3rem; }
+    .content__links {
+      margin-bottom: 0; }
+      .content__links--list {
+        justify-content: flex-start; }
+
+  .dots {
+    position: absolute;
+    right: 0;
+    bottom: 9%; }
+
+  li + li {
+    margin-left: 4rem; } }
 
 /*# sourceMappingURL=style.css.map */
