--- a/assets/sass/_mixin.scss
+++ b/assets/sass/_mixin.scss
@@ -68,6 +68,7 @@
   width: 42.7rem;
   height: 5.6rem;
   background-color: $dark-gray;
+  border-radius: 10rem;
   color: $text-white;
   opacity: 0.5;
   mix-blend-mode: normal;
@@ -77,6 +78,7 @@
   width: 16.2rem;
   height: 4.6rem;
   background-color: $green;
+  border-radius: 10rem;
   color: $dark-blue;
 }
 
