--- a/assets/sass/_breakpoints.scss
+++ b/assets/sass/_breakpoints.scss
@@ -99,7 +99,7 @@
         font-weight: 700;
         padding-left: 3.2rem;
         color: $text-white;
-        opacity: 0.5;
+        opacity: 0.7;
       }
     }
     &__btn {
@@ -109,7 +109,7 @@
       border: none;
       position: absolute;
       top: 11%;
-      right: -6%;
+      right: -6.6%;
       z-index: 2;
     }
   }
@@ -134,9 +134,10 @@
   }
   .wrapper {
     width: 77%;
-    height: 72%;
+    height: 76%;
     flex-wrap: wrap;
     margin-top: 0;
+    margin-bottom: 4rem;
   }
   .content {
     width: 72.3rem;
@@ -154,5 +155,14 @@
   }
   li + li {
     margin-left: 4rem;
+  }
+  .combination {
+    &__email {
+      padding-left: 0;
+    }
+    &__btn {
+      top: 11%;
+      right: 0.6%;
+    }
   }
 }
