--- a/assets/sass/_breakpoints.scss
+++ b/assets/sass/_breakpoints.scss
@@ -1,6 +1,7 @@
 @import "variable";
 @import "mixin";
 
+// Small Screens
 @media screen and (max-width: 350px) {
   .action__email {
     max-width: 32.6rem;
@@ -12,6 +13,7 @@
   }
 }
 
+// Medium Screens
 @media screen and (min-width: 600px) {
   .content__title {
     font-size: 3.6rem;
@@ -121,6 +123,7 @@
   }
 }
 
+// Large Screens
 @media screen and (min-width: 1440px) {
   .image {
     display: none;
