--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -1,6 +1,7 @@
 @import "variable";
 @import "mixin";
 
+// Base
 :root {
   font-size: 62.5%;
 }
@@ -75,6 +76,7 @@ li + li {
   margin-left: 2rem;
 }
 
+// Icons
 .spotify {
   width: 5.6rem;
   height: 1.7rem;
