--- a/assets/sass/_breakpoints.scss
+++ b/assets/sass/_breakpoints.scss
@@ -11,6 +11,9 @@
   .action__btn {
     max-width: 32.6rem;
     width: 100%;
+    &:hover {
+      @include hover;
+    }
   }
 }
 
@@ -131,6 +134,9 @@
       top: 11%;
       right: -6.6%;
       z-index: 2;
+      &:hover {
+        @include hover;
+      }
     }
   }
 
