--- a/assets/sass/_mixin.scss
+++ b/assets/sass/_mixin.scss
@@ -89,3 +89,10 @@
   align-items: center;
   justify-content: space-between;
 }
+
+// Hover effect
+@mixin hover {
+  background-color: lighten($green, 18%);
+  transform: scale(1.1);
+  transition: ease-in-out 0.8s;
+}
