--- a/assets/sass/_breakpoints.scss
+++ b/assets/sass/_breakpoints.scss
@@ -18,9 +18,14 @@
 }
 
 // Medium Screens
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 400px) {
+  .wrapper {
+    height: 85%;
+    max-height: 60rem;
+  }
+
   .content__title {
-    font-size: 3.6rem;
+    font-size: 3.8rem;
   }
 }
 
@@ -41,6 +46,7 @@
 
   .wrapper {
     height: 95%;
+    max-height: none;
     margin-top: 5rem;
   }
 
@@ -165,6 +171,7 @@
   .wrapper {
     width: 77%;
     height: 76%;
+    max-height: 70rem;
     flex-wrap: wrap;
     margin-top: 0;
     margin-bottom: 4rem;
