--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,9 +17,6 @@
 .image__lg {
   display: none; }
 
-.combination {
-  display: none; }
-
 .dots {
   display: none; }
 
@@ -131,7 +128,6 @@ li + li {
       transform: scale(1.1);
       transition: ease-in-out 0.8s; }
 
-#response,
 #reply {
   font-size: 1.4rem;
   color: #fb3e3e;
@@ -182,7 +178,8 @@ li + li {
     width: 63.5rem;
     height: 51rem;
     background-color: #121725;
-    justify-content: flex-end; }
+    justify-content: flex-end;
+    align-items: flex-start; }
     .content__box {
       display: flex;
       flex-direction: column;
@@ -202,8 +199,10 @@ li + li {
       margin: 0;
       text-align: left;
       max-width: 44.5rem; }
-    .content__links--list {
-      justify-content: flex-start; }
+    .content__links {
+      order: 3; }
+      .content__links--list {
+        justify-content: flex-start; }
 
   li + li {
     margin-left: 3rem; }
@@ -229,14 +228,12 @@ li + li {
     opacity: 0.5; }
 
   .action {
-    display: none; }
-
-  .combination {
     display: flex;
+    align-items: flex-start;
     width: 427px;
     height: 56px;
     position: relative; }
-    .combination__email {
+    .action__email {
       width: 42.7rem;
       height: 5.6rem;
       background-color: #2c344b;
@@ -251,12 +248,12 @@ li + li {
       border: none;
       padding-left: 3.2rem;
       border: none; }
-      .combination__email::placeholder {
+      .action__email::placeholder {
         font-weight: 700;
         padding-left: 3.2rem;
         color: #fff;
         opacity: 0.7; }
-    .combination__btn {
+    .action__btn {
       width: 16.2rem;
       height: 4.6rem;
       background-color: #54e6af;
@@ -270,10 +267,10 @@ li + li {
       font-weight: 700;
       border: none;
       position: absolute;
-      top: 11%;
-      right: -6.6%;
+      top: 0;
+      right: -14%;
       z-index: 2; }
-      .combination__btn:hover {
+      .action__btn:hover {
         background-color: #a4f2d4;
         transform: scale(1.1);
         transition: ease-in-out 0.8s; }
@@ -315,12 +312,6 @@ li + li {
     bottom: 9%; }
 
   li + li {
-    margin-left: 4rem; }
-
-  .combination__email {
-    padding-left: 0; }
-  .combination__btn {
-    top: 11%;
-    right: 0.6%; } }
+    margin-left: 4rem; } }
 
 /*# sourceMappingURL=style.css.map */
