--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,7 +169,8 @@ li + li {
   .wrapper {
     height: 95%;
     max-height: none;
-    margin-top: 5rem; }
+    margin-top: 5rem;
+    margin-right: 6%; }
 
   .logo {
     align-self: flex-start; }
@@ -297,7 +298,8 @@ li + li {
     max-height: 70rem;
     flex-wrap: wrap;
     margin-top: 0;
-    margin-bottom: 4rem; }
+    margin-bottom: 4rem;
+    margin-right: 0; }
 
   .content {
     width: 72.3rem; }
