--- a/assets/sass/_breakpoints.scss
+++ b/assets/sass/_breakpoints.scss
@@ -48,6 +48,7 @@
     height: 95%;
     max-height: none;
     margin-top: 5rem;
+    margin-right: 6%;
   }
 
   .logo {
@@ -176,6 +177,7 @@
     flex-wrap: wrap;
     margin-top: 0;
     margin-bottom: 4rem;
+    margin-right: 0;
   }
 
   .content {
