Moved background images from img tag to css background selector

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,6 +160,10 @@ li + li {
     background-color: #121725; }
 
   .image {
+    background: url("../../assets/tablet/ezgif.com-gif-maker.webp") no-repeat center;
+    background-size: cover;
+    width: 49.1rem;
+    height: 76.7rem;
     display: block;
     position: absolute;
     top: 0;
@@ -287,6 +291,10 @@ li + li {
 
   .image__lg {
     display: block;
+    background: url(../../assets/desktop/ezgif.com-gif-maker.webp) no-repeat center;
+    background-size: cover;
+    width: 88.8rem;
+    height: 64rem;
     position: absolute;
     top: 14%;
     right: 0;
@@ -303,6 +311,8 @@ li + li {
 
   .content {
     width: 72.3rem; }
+    .content__title {
+      padding-top: 1.8em; }
     .content__links {
       margin-bottom: 0; }
       .content__links--list {
