Improve accessability for icon, logo and form

--- a/assets/sass/_breakpoints.scss
+++ b/assets/sass/_breakpoints.scss
@@ -154,6 +154,8 @@
   }
 
   .dots {
+    background: url("../../assets/desktop/bg-pattern-dots.svg") no-repeat center;
+    background-size: cover;
     display: block;
     width: 23.2rem;
     height: 10.4rem;
