Corrected font-size to heading in larger screens

--- a/assets/sass/_breakpoints.scss
+++ b/assets/sass/_breakpoints.scss
@@ -195,6 +195,7 @@
   .content {
     width: 72.3rem;
     &__title {
+      @include title-desktop;
       padding-top: 1.8em;
     }
     &__links {
