--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -314,6 +314,8 @@ li + li {
   .content {
     width: 72.3rem; }
     .content__title {
+      font-size: 5.2rem;
+      line-height: 6.2rem;
       padding-top: 1.8em; }
     .content__links {
       margin-bottom: 0; }
