Adjusting height on logo on large screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,8 +235,8 @@ li + li {
   .action {
     display: flex;
     align-items: flex-start;
-    width: 427px;
-    height: 56px;
+    width: 42.7rem;
+    height: 5.6rem;
     position: relative; }
     .action__email {
       width: 42.7rem;
@@ -291,6 +291,9 @@ li + li {
   .image {
     display: none; }
 
+  .logo {
+    padding-top: 2rem; }
+
   .image__lg {
     display: block;
     background: url(../../assets/desktop/ezgif.com-gif-maker.webp) no-repeat center;
@@ -298,7 +301,7 @@ li + li {
     width: 88.8rem;
     height: 64rem;
     position: absolute;
-    top: 14%;
+    top: 14.5%;
     right: 0;
     z-index: -1; }
 
