--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,8 @@ li + li {
   margin-top: 2rem;
   max-width: 40rem;
   width: 100%; }
+  .action__form {
+    position: relative; }
   .action__email {
     font-weight: 400;
     font-size: 1.4rem;
@@ -131,8 +133,9 @@ li + li {
 #reply {
   font-size: 1.4rem;
   color: #fb3e3e;
-  margin-bottom: 1rem;
-  margin-top: 1rem; }
+  position: absolute;
+  top: -22%;
+  left: 20%; }
 
 @media screen and (max-width: 350px) {
   .action__email {
@@ -205,7 +208,8 @@ li + li {
       text-align: left;
       max-width: 44.5rem; }
     .content__links {
-      order: 3; }
+      order: 3;
+      margin-bottom: 0; }
       .content__links--list {
         justify-content: flex-start; }
 
@@ -252,10 +256,11 @@ li + li {
       border-radius: 10rem;
       border: none;
       padding-left: 3.2rem;
+      margin-top: 2rem;
       border: none; }
       .action__email::placeholder {
         font-weight: 700;
-        padding-left: 3.2rem;
+        padding-left: 3rem;
         color: #fff;
         opacity: 0.7; }
     .action__btn {
@@ -272,13 +277,17 @@ li + li {
       font-weight: 700;
       border: none;
       position: absolute;
-      top: 0;
-      right: -14%;
+      top: 12.4%;
+      right: 1%;
       z-index: 2; }
       .action__btn:hover {
         background-color: #a4f2d4;
         transform: scale(1.1);
         transition: ease-in-out 0.8s; }
+
+  #reply {
+    top: 110%;
+    left: 10%; }
 
   .dots {
     background: url("../../assets/desktop/bg-pattern-dots.svg") no-repeat center;
