--- a/assets/sass/_breakpoints.scss
+++ b/assets/sass/_breakpoints.scss
@@ -83,6 +83,7 @@
       max-width: 44.5rem;
     }
     &__links {
+      height: 3.4rem;
       order: 3;
       margin-bottom: 0;
 
@@ -125,7 +126,8 @@
     align-items: flex-start;
     width: 42.7rem;
     height: 5.6rem;
-    margin-top: 1rem;
+    // margin-top: 1rem;
+    margin-left: 0;
     position: relative;
     &__email {
       @include field-lg;
@@ -209,6 +211,7 @@
       @include title-desktop;
     }
     &__links {
+      height: 3rem;
       margin-bottom: 0;
       &--list {
         justify-content: flex-start;
