--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -99,7 +99,8 @@ li + li {
   @include flex-column;
   min-height: 11rem;
   text-align: center;
-  margin-top: 2rem;
+  margin-top: 3rem;
+  margin: auto;
   max-width: 40rem;
   width: 100%;
   &__form {
